--- a/index.html
+++ b/index.html
@@ -1,34 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ACPM</title>
+    <title>Planimeter</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="styles/main.css" rel="stylesheet">
     <link href="styles/theme.css" rel="stylesheet">
-    <link href="styles/nav.css" rel="stylesheet">
-    <link href="styles/about.css" rel="stylesheet">
   </head>
   <body>
     <header>
       <a href="/">
-        <img src="images/logo.svg" alt="ACPM">
+        <img src="images/logo.svg" alt="Planimeter">
       </a>
-      <nav>
-        <ol>
-          <li><a href="">About</a></li>
-        </ol>
-      </nav>
     </header>
     <main>
-      <h1>
-        <small>Hello, world.</small><br>
-        I'm a developer & designer in Mesa.
-      </h1>
-      <a href="https://github.com/andrewmcwatters">Follow me on GitHub</a>
     </main>
     <footer>
-      Copyright © 2016 Andrew McWatters
+      Copyright © 2016 Planimeter
     </footer>
   </body>
 </html>
