Updated portfolio screenshots

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
         <img src="images/vertex_adventure.png"
              alt="Vertex Adventure"
              width="100%"
-             style="max-width: 640px">
+             style="max-width: 1392px; max-height: 854px">
       </a>
       <h2>
         Grid Engine
@@ -45,7 +45,7 @@
         <img src="images/grid_engine.png"
              alt="Grid Engine"
              width="100%"
-             style="max-width: 640px">
+             style="max-width: 1392px; max-height: 854px">
       </a>
       <h2>
         andrewmcwatters.com <small>(2016)</small>
