--- a/portfolio.html
+++ b/portfolio.html
@@ -56,6 +56,17 @@
              width="100%"
              style="max-width: 1436px; max-height: 1052px">
       </a>
+      <h1>
+        2016
+      </h1>
+      <h2>
+        include.js
+      </h2>
+      <a href="https://github.com/andrewmcwatters/include.js">Learn more</a>
+      <h2>
+        route.js
+      </h2>
+      <a href="https://github.com/andrewmcwatters/route.js">Learn more</a>
     </main>
     <footer>
       Copyright © 2016 Andrew McWatters
