--- a/portfolio.html
+++ b/portfolio.html
@@ -60,20 +60,17 @@
         2016
       </h1>
       <h2>
-        include.js
+        <a href="https://github.com/andrewmcwatters/route.js">include.js</a>
       </h2>
-      <a href="https://github.com/andrewmcwatters/include.js">Learn more</a>
       <h2>
-        route.js
+        <a href="https://github.com/andrewmcwatters/route.js">route.js</a>
       </h2>
-      <a href="https://github.com/andrewmcwatters/route.js">Learn more</a>
       <h1>
         2012
       </h1>
       <h2>
-        lclass
+        <a href="https://github.com/andrewmcwatters/lclass">lclass</a>
       </h2>
-      <a href="https://github.com/andrewmcwatters/lclass">Learn more</a>
     </main>
     <footer>
       Copyright © 2016 Andrew McWatters
