Added descriptions to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -62,15 +62,24 @@
       <h2>
         <a href="https://github.com/andrewmcwatters/route.js">include.js</a>
       </h2>
+      <p>
+        Fetches and includes an external HTML fragment
+      </p>
       <h2>
         <a href="https://github.com/andrewmcwatters/route.js">route.js</a>
       </h2>
+      <p>
+        Provides routing and deeplinking
+      </p>
       <h1>
         2012
       </h1>
       <h2>
         <a href="https://github.com/andrewmcwatters/lclass">lclass</a>
       </h2>
+      <p>
+        Lua with Classes
+      </p>
     </main>
     <footer>
       Copyright © 2016 Andrew McWatters
