--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
              style="max-width: 1392px; max-height: 854px">
       </a>
       <h2>
-        Grid Engine
+        <a href="https://github.com/Planimeter/grid-sdk">Grid (game engine)</a>
       </h2>
       <a href="images/grid_engine.png">
         <img src="images/grid_engine.png"
@@ -48,7 +48,7 @@
              style="max-width: 1392px; max-height: 854px">
       </a>
       <h2>
-        andrewmcwatters.com <small>(2016)</small>
+        <a href="https://github.com/andrewmcwatters/andrewmcwatters.github.io">andrewmcwatters.com <small>(2016)</small></a>
       </h2>
       <a href="images/andrewmcwatters.com.png">
         <img src="images/andrewmcwatters.com.png"
