Added descriptions to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,6 +32,10 @@
       <h2>
         Vertex Adventure
       </h2>
+      <p>
+        A 2D massively multiplayer online role-playing game set in a middle ages
+        of the future
+      </p>
       <a href="images/vertex_adventure.png">
         <img src="images/vertex_adventure.png"
              alt="Vertex Adventure"
@@ -41,6 +45,9 @@
       <h2>
         <a href="https://github.com/Planimeter/grid-sdk">Grid (game engine)</a>
       </h2>
+      <p>
+        A 2D game engine built on LÖVE
+      </p>
       <a href="images/grid_engine.png">
         <img src="images/grid_engine.png"
              alt="Grid Engine"
@@ -50,6 +57,9 @@
       <h2>
         <a href="https://github.com/andrewmcwatters/andrewmcwatters.github.io">andrewmcwatters.com <small>(2016)</small></a>
       </h2>
+      <p>
+        From the desk of Andrew McWatters
+      </p>
       <a href="images/andrewmcwatters.com.png">
         <img src="images/andrewmcwatters.com.png"
              alt="andrewmcwatters.com (2016)"
