--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main>
       <h1>
         <small>Hello, world.</small><br>
-        I'm a developer & designer in Mesa.
+        I'm a developer & designer in Phoenix.
       </h1>
       <a href="https://github.com/andrewmcwatters">Follow me on GitHub</a>
     </main>
