--- a/portfolio.html
+++ b/portfolio.html
@@ -81,6 +81,12 @@
       <p>
         Provides routing and deeplinking
       </p>
+      <h2>
+        <a href="https://github.com/andrewmcwatters/data-marked">data-marked</a>
+      </h2>
+      <p>
+        Markdown in plain JS using marked
+      </p>
       <h1>
         2012
       </h1>
