--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
         <a href="https://github.com/andrewmcwatters/data-marked">data-marked</a>
       </h2>
       <p>
-        Markdown in plain JS using marked
+        Markdown in plain HTML using marked
       </p>
       <h1>
         2012
