--- a/portfolio.html
+++ b/portfolio.html
@@ -43,7 +43,7 @@
              style="max-width: 1392px; max-height: 854px">
       </a>
       <h2>
-        <a href="https://github.com/Planimeter/grid-sdk">Grid (game engine)</a>
+        <a href="http://planimeter.github.io/grid-sdk/">Grid (game engine)</a>
       </h2>
       <p>
         A 2D game engine built on LÖVE
