--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ol>
           <li class="active"><a href=".">About</a></li>
           <li><a href="portfolio">Portfolio</a></li>
-          <!-- <li><a href="resume.pdf">Résumé</a></li> -->
+          <li><a href="resume.pdf">Résumé</a></li>
         </ol>
       </nav>
       <h3>
