--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
         <ol>
           <li><a href=".">About</a></li>
           <li class="active"><a href="portfolio">Portfolio</a></li>
-          <!-- <li><a href="resume.pdf">Résumé</a></li> -->
+          <li><a href="resume.pdf">Résumé</a></li>
         </ol>
       </nav>
       <h3>
