--- a/index.html
+++ b/index.html
@@ -14,7 +14,14 @@
         <img src="images/logo.svg" alt="Planimeter">
       </a>
     </header>
-    <main></main>
+    <main>
+      <h1>Hello. We are Planimeter.</h1>
+      <p>
+        Creators of <a href="http://www.planimeter.org/grid-sdk/">Grid</a> and
+        Axis.
+      </p>
+      <a href="https://github.com/Planimeter">Planimeter on GitHub</a>
+    </main>
     <footer>
       Copyright © 2016 Planimeter
     </footer>
