--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <main>
       <h1>Hello. We are Planimeter.</h1>
       <p>
-        Creators of <a href="http://www.planimeter.org/grid-sdk/">Grid</a> and
-        Axis.
+        Creators of <a href="grid-sdk">Grid</a> and Axis.
       </p>
       <a href="https://github.com/Planimeter">Planimeter on GitHub</a>
     </main>
