Added about styles

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="styles/main.css" rel="stylesheet">
     <link href="styles/font-stack.css" rel="stylesheet">
     <link href="styles/theme.css" rel="stylesheet">
+    <link href="styles/about.css" rel="stylesheet">
   </head>
   <body>
     <header>
