--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <main>
       <h1>Hello. We are Planimeter.</h1>
       <p>
-        Creators of <a href="grid-sdk">Grid</a>.
+        Creators of <a href="grid-sdk">Grid</a> and
+        <a href="https://github.com/Planimeter/lgameframework">lgameframework.</a>
       </p>
       <a href="https://github.com/Planimeter">Planimeter on GitHub</a>
     </main>
