--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
       <a href="/">
         <img src="images/logo.svg" alt="Planimeter">
       </a>
+      <nav>
+        <ol>
+          <li class="active"><a href=".">About</a></li>
+          <li><a href="projects">Projects</a></li>
+        </ol>
+      </nav>
+      <h3>
+        <small>Development Supercollective</small>
+      </h3>
     </header>
     <main>
       <h1>Hello. We are Planimeter.</h1>
