--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav>
         <ol>
           <li class="active"><a href=".">About</a></li>
-          <li><a href="projects">Projects</a></li>
+          <li><a href="repositories">Repositories</a></li>
         </ol>
       </nav>
       <h3>
