--- a/repositories.html
+++ b/repositories.html
@@ -21,7 +21,7 @@
         </ol>
       </nav>
       <h3>
-        <small>Repositories</small>
+        <small>Projects</small>
       </h3>
     </header>
     <main data-include="repositories.md" data-marked>
