--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     </header>
     <main>
       <h1>Hello. We are Planimeter.</h1>
-      <h2>Game engine, framework, and library technology, high-speed screen capture research, VR driver producer.</h2>
+      <h2>
+        <small>Game engine, framework, and library technology, high-speed screen capture
+        research, VR driver producer.</small>
+      </h2>
       <p>
         Creators of <a href="grid-sdk">Grid</a> and
         <a href="https://github.com/Planimeter/lgameframework">lgameframework.</a>
