--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <ol>
           <li class="active"><a href=".">About</a></li>
           <li><a href="repositories">Repositories</a></li>
+          <li><a href="forums">Forums</a></li>
         </ol>
       </nav>
       <h3>
