--- a/repositories.html
+++ b/repositories.html
@@ -18,6 +18,7 @@
         <ol>
           <li><a href=".">About</a></li>
           <li class="active"><a href="repositories">Repositories</a></li>
+          <li><a href="forums">Forums</a></li>
         </ol>
       </nav>
       <h3>
