--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
     <main>
       <h1>Hello. We are Planimeter.</h1>
       <h2>
-        <small>Game engine, framework, and library technology, high-speed
-        screen capture research, and VR driver producer.</small>
+        <small>Game engine, framework, and library technology.</small>
       </h2>
       <p>
         Creators of <a href="grid-sdk">Grid</a> and
