--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
       </h3>
     </header>
     <main>
-      <h1>Hello. We are Planimeter.</h1>
+      <h1>
+        Hello. We are Planimeter.
+      </h1>
       <h2>
-        <small>Game engine, framework, and library technology.</small>
+        Game engine, framework, and library technology.
       </h2>
       <p>
         Creators of <a href="grid-sdk">Grid</a> and
