--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         Hello. We are Planimeter.
       </h1>
       <h2>
-        Game engine, framework, and library technology.
+        Game engine, framework, and library technology, high-speed screen
+        capture research, and VR driver producer.
       </h2>
       <p>
         Creators of <a href="grid-sdk">Grid</a> and
