--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <nav>
         <ol>
           <li class="active"><a href=".">About</a></li>
+          <li><a href="blog">Blog</a></li>
         </ol>
       </nav>
       <h3>
