--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       </a>
       <nav>
         <ol>
-          <li class="active"><a href=".">About</a></li>
-          <li><a href="blog">Blog</a></li>
+          <li class="active"><a href="/">About</a></li>
+          <li><a href="/blog">Blog</a></li>
         </ol>
       </nav>
       <h3>
