--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         capture research, and VR driver producer.
       </h2>
       <p>
-        Creators of <a href="grid-sdk">Grid</a> and
+        Creators of <a href="/grid-sdk">Grid</a> and
         <a href="https://github.com/Planimeter/lgameframework">lgameframework.</a>
       </p>
       <a href="https://github.com/Planimeter">Planimeter on GitHub</a>
