--- a/index.html
+++ b/index.html
@@ -10,30 +10,28 @@
 
       gtag('config', 'UA-108356826-1');
     </script>
+    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <title>Planimeter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+    <!-- Custom styles for this template -->
     <link href="styles/main.css" rel="stylesheet">
-    <link href="styles/font-stack.css" rel="stylesheet">
     <link href="styles/theme.css" rel="stylesheet">
-    <link href="styles/nav.css" rel="stylesheet">
     <link href="styles/about.css" rel="stylesheet">
+
+    <title>Planimeter</title>
   </head>
   <body>
     <header>
       <a href="/">
         <img src="images/logo.svg" alt="Planimeter">
       </a>
-      <nav>
-        <ol>
-          <li class="active"><a href="/">About</a></li>
-        </ol>
-      </nav>
-      <h3>
-        <small>Development Supercollective</small>
-      </h3>
     </header>
-    <main>
+
+    <main role="main">
       <h1>
         Hello. We are Planimeter.
       </h1>
@@ -47,8 +45,14 @@
       </p>
       <a href="https://github.com/Planimeter">Planimeter on GitHub</a>
     </main>
-    <footer>
-      Copyright © 2018 Planimeter
+
+    <footer class="footer">
+      <div class="row">
+        <div class="col">
+          <span class="text-muted">Copyright &copy; 2018 Planimeter. All
+          rights reserved.</span>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
