--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         Hello. We are Planimeter.
       </h1>
       <h2>
-        Game engine, framework, and library technology, high-speed screen
-        capture research, and VR driver producer.
+        Game engine, framework, and library technology.
       </h2>
       <p>
         Creators of <a href="/grid-sdk">Grid</a> and
@@ -49,7 +48,7 @@
     <footer class="footer">
       <div class="row">
         <div class="col">
-          <span class="text-muted">Copyright &copy; 2018 Planimeter. All
+          <span class="text-muted">Copyright &copy; 2019 Planimeter. All
           rights reserved.</span>
         </div>
       </div>
