--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
         Creators of <a href="/grid-sdk">Grid</a> and
         <a href="https://github.com/Planimeter/lgameframework">lgameframework.</a>
       </p>
-      <a href="https://github.com/Planimeter">Planimeter on GitHub</a>
+      <a href="https://github.com/Planimeter">Planimeter on GitHub &#x2192;</a>
     </main>
 
     <footer class="footer">
       <div class="row">
         <div class="col">
-          <span class="text-muted">Copyright &copy; 2019 Planimeter. All
-          rights reserved.</span>
+          <small class="text-muted">Copyright &copy; 2019 Planimeter. All
+          rights reserved.</small>
         </div>
       </div>
     </footer>
