--- a/index.html
+++ b/index.html
@@ -1,57 +1,99 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" class="h-100">
   <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108356826-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-108356826-1');
-    </script>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <!-- Custom styles for this template -->
-    <link href="styles/main.css" rel="stylesheet">
-    <link href="styles/theme.css" rel="stylesheet">
-    <link href="styles/about.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://www.andrewmcwatters.com/stylesheets/vendor.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://www.andrewmcwatters.com/stylesheets/theme.css"
+    />
 
     <title>Planimeter</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-108356826-1"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-108356826-1");
+    </script>
   </head>
-  <body>
+  <body class="d-flex flex-column h-100">
     <header>
-      <a href="/">
-        <img src="images/logo.svg" alt="Planimeter">
-      </a>
+      <div class="container" style="margin-top: 1in; margin-bottom: 1in">
+        <p>
+          <a href="/">
+            <picture>
+              <img src="images/logo.svg" alt="Planimeter" />
+            </picture>
+          </a>
+        </p>
+      </div>
     </header>
-
-    <main role="main">
-      <h1>
-        Hello. We are Planimeter.
-      </h1>
-      <h2>
-        Game engine, framework, and library technology.
-      </h2>
-      <p>
-        Creators of <a href="/grid-sdk">Grid</a> and
-        <a href="https://github.com/Planimeter/lgameframework">lgameframework.</a>
-      </p>
-      <a href="https://github.com/Planimeter">Planimeter on GitHub &#x2192;</a>
+    <main class="d-flex flex-grow-1">
+      <div
+        class="container d-flex flex-column flex-grow-1 justify-content-center"
+        style="margin-bottom: 1in"
+      >
+        <h1>Hello. We are Planimeter.</h1>
+        <h2>Game engine, framework, and library technology.</h2>
+        <p>
+          Creators of <a href="/grid-sdk">Grid</a> and
+          <a href="https://github.com/Planimeter/lgameframework"
+            >lgameframework.</a
+          >
+        </p>
+        <a href="https://github.com/Planimeter"
+          >Planimeter on GitHub &#x2192;</a
+        >
+      </div>
     </main>
-
-    <footer class="footer">
-      <div class="row">
-        <div class="col">
-          <small class="text-muted">Copyright &copy; 2020 Planimeter. All
-          rights reserved.</small>
-        </div>
+    <footer>
+      <div class="container" style="margin-bottom: 1in">
+        <p class="mb-0">
+          <small class="text-muted"
+            >Copyright © 2015-2022 Planimeter. All rights reserved.</small
+          >
+        </p>
       </div>
     </footer>
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
   </body>
 </html>
