--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
         class="container d-flex flex-column flex-grow-1 justify-content-center"
         style="margin-bottom: 1in"
       >
-        <h1>Hello. We are Planimeter.</h1>
-        <h2>Game engine, framework, and library technology.</h2>
+        <h1>Game engine, framework, and library technology.</h1>
         <p>
           Creators of <a href="/grid-sdk">Grid</a> and
           <a href="https://github.com/Planimeter/lgameframework"
@@ -74,8 +73,8 @@
     <footer>
       <div class="container" style="margin-bottom: 1in">
         <p class="mb-0">
-          <small class="text-muted"
-            >Copyright © 2015-2022 Planimeter. All rights reserved.</small
+          <span class="text-muted"
+            >Copyright © 2015-2022 Planimeter. All rights reserved.</span
           >
         </p>
       </div>
