--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
         class="container d-flex flex-column flex-grow-1 justify-content-center"
         style="margin-bottom: 1in"
       >
-        <h1>Game engine, framework, and library technology.</h1>
+        <h1>
+          <small>Game engine, framework, and library technology.</small>
+        </h1>
         <p>
           Creators of <a href="/grid-sdk">Grid</a> and
           <a href="https://github.com/Planimeter/lgameframework"
