--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
           <small>Game engine, framework, and library technology.</small>
         </h1>
         <p>
-          Creators of <a href="/grid-sdk">Grid</a> and
-          <a href="https://github.com/Planimeter/lgameframework"
-            >lgameframework.</a
+          Creators of <a href="/game-engine-2d">Planimeter Game Engine 2D</a> and
+          <a href="https://github.com/Planimeter/game-framework"
+            >Planimeter Game Framework.</a
           >
         </p>
         <a href="https://github.com/Planimeter"
