--- a/index.html
+++ b/index.html
@@ -51,6 +51,23 @@
             </picture>
           </a>
         </p>
+        <nav>
+          <ul class="nav">
+            <li class="nav-item">
+              <a class="nav-link active ps-0" href="/">Home</a>
+            </li>
+            <li class="nav-item text-center">
+              <a class="nav-link" href="/game-engine-2d"
+                >Game Engine 2D<br /><small class="text-new">New</small></a
+              >
+            </li>
+            <li class="nav-item text-center">
+              <a class="nav-link pe-0" href="/game-framework"
+                >Game Framework<br /><small class="text-new">New</small></a
+              >
+            </li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main class="d-flex flex-grow-1">
@@ -61,12 +78,6 @@
         <h1>
           <small>Game engine, framework, and library technology.</small>
         </h1>
-        <p>
-          Creators of <a href="/game-engine-2d">Planimeter Game Engine 2D</a> and
-          <a href="https://github.com/Planimeter/game-framework"
-            >Planimeter Game Framework.</a
-          >
-        </p>
         <a href="https://github.com/Planimeter"
           >Planimeter on GitHub &#x2192;</a
         >
