--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
               >
             </li>
             <li class="nav-item text-center">
-              <a class="nav-link pe-0" href="/game-framework"
+              <a
+                class="nav-link pe-0"
+                href="https://github.com/Planimeter/game-framework"
                 >Game Framework<br /><small class="text-new">New</small></a
               >
             </li>
