--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <body class="d-flex flex-column h-100">
     <header>
       <div class="container" style="margin-top: 1in; margin-bottom: 1in">
-        <p>
+        <p style="height: 27.5px;">
           <a href="/">
             <picture>
               <img src="images/logo.svg" alt="Planimeter" />
