Prepare "Compare game software"

--- a/index.html
+++ b/index.html
@@ -58,16 +58,23 @@
             </li>
             <li class="nav-item text-center">
               <a class="nav-link" href="/game-engine-2d"
-                >Game Engine 2D<br /><small class="text-new">New</small></a
+                >Game Engine 2D</a
               >
             </li>
             <li class="nav-item text-center">
               <a
                 class="nav-link pe-0"
                 href="https://github.com/Planimeter/game-framework"
-                >Game Framework<br /><small class="text-new">New</small></a
+                >Game Framework</a
               >
             </li>
+            <!-- <li class="nav-item text-center">
+              <a
+                class="nav-link pe-0"
+                href="compare"
+                >Compare game software<br /><small class="text-new">New</small></a
+              >
+            </li> -->
           </ul>
         </nav>
       </div>
