--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <body class="d-flex flex-column h-100">
     <header>
       <div class="container" style="margin-top: 1in; margin-bottom: 1in">
-        <p style="height: 27.5px;">
+        <p style="height: 27.5px">
           <a href="/">
             <picture>
               <img src="images/logo.svg" alt="Planimeter" />
@@ -57,9 +57,7 @@
               <a class="nav-link active ps-0" href="/">Home</a>
             </li>
             <li class="nav-item text-center">
-              <a class="nav-link" href="/game-engine-2d"
-                >Game Engine 2D</a
-              >
+              <a class="nav-link" href="/game-engine-2d">Game Engine 2D</a>
             </li>
             <li class="nav-item text-center">
               <a
