--- a/compare.html
+++ b/compare.html
@@ -24,7 +24,7 @@
       href="https://www.andrewmcwatters.com/stylesheets/theme.css"
     />
 
-    <title>Planimeter</title>
+    <title>Compare game software - Planimeter</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -54,7 +54,7 @@
         <nav>
           <ul class="nav">
             <li class="nav-item">
-              <a class="nav-link active ps-0" href="/">Home</a>
+              <a class="nav-link ps-0" href="/">Home</a>
             </li>
             <li class="nav-item text-center">
               <a class="nav-link" href="/game-engine-2d">Game Engine 2D</a>
@@ -67,9 +67,7 @@
               >
             </li>
             <li class="nav-item text-center">
-              <a class="nav-link pe-0" href="compare"
-                >Compare<br /><small class="text-new">New</small></a
-              >
+              <a class="nav-link active pe-0" href="compare">Compare</a>
             </li>
           </ul>
         </nav>
@@ -80,12 +78,8 @@
         class="container d-flex flex-column flex-grow-1 justify-content-center"
         style="margin-bottom: 1in"
       >
-        <h1>
-          <small>Game engine, framework, and library technology.</small>
-        </h1>
-        <a href="https://github.com/Planimeter"
-          >Planimeter on GitHub &#x2192;</a
-        >
+        <h1>Compare game software</h1>
+        <p>Coming soon.</p>
       </div>
     </main>
     <footer>
