--- a/compare.html
+++ b/compare.html
@@ -78,8 +78,8 @@
         class="container d-flex flex-column flex-grow-1 justify-content-center"
         style="margin-bottom: 1in"
       >
-        <h1>Compare game software</h1>
-        <p>Coming soon.</p>
+        <!-- We will put our React component inside this div. -->
+        <div id="compare_container"></div>
       </div>
     </main>
     <footer>
@@ -106,5 +106,14 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     -->
+
+    <!-- Load React. -->
+    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
+    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+
+    <!-- Load our React component. -->
+    <script src="/javascripts/compare.js"></script>
+
   </body>
 </html>
