Update logo height

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p style="height: 27.5px">
           <a href="/">
             <picture>
-              <img src="images/logo.svg" alt="Planimeter" />
+              <img src="images/logo.svg" alt="Planimeter" height="16" />
             </picture>
           </a>
         </p>
@@ -97,6 +97,10 @@
         </p>
       </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
